--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && cp -r .next/static out/ && cp -r .next/server/app/* out/",
     "start": "next start",
     "lint": "next lint"
   },
